--- a/.github/workflows/test-proxies.yml
+++ b/.github/workflows/test-proxies.yml
@@ -17,9 +17,9 @@ jobs:
       - name: 📥 拉取仓库代码
         uses: actions/checkout@v4
 
-      - name: 🧹 删除旧的 proxies.txt 和 log.txt
+      - name: 🧹 删除旧的 proxies.txt、oc2proxies.txt、log.txt
         run: |
-          rm -f proxies.txt log.txt
+          rm -f proxies.txt oc2proxies.txt log.txt
 
       - name: 🐍 设置 Python 3.12.7
         uses: actions/setup-python@v5
@@ -33,14 +33,14 @@ jobs:
       - name: 🚀 运行测试脚本
         run: python test.py
 
-      - name: 📝 提交 proxies.txt 和 log.txt（若存在）
+      - name: 📝 提交 proxies.txt、oc2proxies.txt 和 log.txt（若存在）
         run: |
-          if [ -f proxies.txt ] && [ -f log.txt ]; then
+          if [ -f proxies.txt ] && [ -f oc2proxies.txt ] && [ -f log.txt ]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add proxies.txt log.txt
-            git commit -m "Update proxies.txt and log.txt from CI run"
+            git add proxies.txt oc2proxies.txt log.txt
+            git commit -m "Update proxies files from CI run"
             git push
           else
-            echo "⚠️ proxies.txt 或 log.txt 不存在，跳过提交"
+            echo "⚠️ 文件不存在，跳过提交"
           fi
